added features to website

--- a/index.css
+++ b/index.css
@@ -1,4 +1,14 @@
 body {
     font-family: sans-serif;
     background-color: lavender;
+
+
+    
+
+
+}
+
+.scrollThing {
+    font-size: 250%;
+    color: mediumslateblue;
 }
